--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@
   flex-wrap: wrap;
   margin: 1rem;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 .studentCards:hover {
   box-shadow: 10px 10px 20px rgb(182, 180, 180),
