--- a/src/App.css
+++ b/src/App.css
@@ -62,19 +62,32 @@
   align-items: flex-start;
   cursor: pointer;
 }
-.StudentHomePortal{
+.StudentHomePortal {
   border: 1px solid black;
   color: white;
   text-align: center;
   margin: auto;
   width: 100%;
-  height: 100vh;
-  background-image: url('./Component/img/pexels-pixabay-267885.jpg');
+  min-height: 100vh;
+  background-image: url("./Component/img/pexels-pixabay-267885.jpg");
   background-size: 100% 100%;
 }
-.profileButton{
- margin: auto;
+.profileButton {
+  margin: auto;
 }
-.Createstudentfield{
+.Createstudentfield {
+  margin: auto;
+}
+
+.head12 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.btnhome {
+  width: fit-content;
   margin: auto;
 }
